--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,7 +5,7 @@
   <tr>
     <td><%= link_to list.name, list %></td>
   <% if user_is_admin? %>
-    <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Delete', list, method: :delete, data: { confirm: "Are you sure you want to delete #{list.name}?" } %></td>
   <% end %>
   </tr>
 <% end %>
