--- a/app/views/question_dependency_pairs/_show.html.erb
+++ b/app/views/question_dependency_pairs/_show.html.erb
@@ -3,8 +3,10 @@
 
 <div class="question_dependency_pair">
   <li>This question <%= question_dependency_pair.is_requirement? ? 'requires' : 'is supported by' %>
-        question <%= question_dependency_pair.independent_question.position %>. |
-        <%= link_to 'Remove', question_dependency_pair, method: :delete, data: {
+        question <%= question_dependency_pair.independent_question.position %>.
+        <% if question_dependency_pair.can_be_destroyed_by?(current_user) || user_is_admin? %>
+        | <%= link_to 'Remove', question_dependency_pair, method: :delete, data: {
           confirm: "Are you sure you want to remove this question's dependency on question #{question_dependency_pair.independent_question.position}?"
-        } %></li>
+        } %>
+        <% end %></li>
 </div>
