--- a/app/views/collaborators/new.html.erb
+++ b/app/views/collaborators/new.html.erb
@@ -1,26 +1,13 @@
 <%= page_heading 'Add collaborator' %>
 
-<%= form_tag(new_polymorphic_path([@publishable, :collaborator]), :method => :get) do %>
-  <table width="550px" align="center">
-    <tr>
-      <td><%= label_tag 'Search For:' %>&nbsp;</td>
-      <td><%= text_field_tag 'query', @query %>&nbsp;</td>
-      <td><%= label_tag 'in:' %>&nbsp;</td>
-      <td><%= select_tag 'type', 
-              options_for_select(['Name', 'Username', 'Email'], @type) %>
-        &nbsp;
-      </td>
-      <td>
-        <%= submit_tag 'Search' %>
-      </td>
-    </tr>
-  </table>
-<% end %>
+<%= render :partial => 'shared/users_search',
+           :locals => { :current_path => new_polymorphic_path([@publishable, :collaborator]),
+                        :container => @publishable,
+                        :presence_check_method => 'has_collaborator?',
+                        :already_present_text => 'Already a collaborator',
+                        :form_action_path => polymorphic_path([@publishable, :collaborators]),
+                        :submit_text => 'Add collaborator' } %>
 
-<div id="users_list">
-  <%= render :partial => 'users_list',
-             :locals => {:users => @users,
-                         :publishable => @publishable} %>
-</div>
+<br/>
 
 <%= link_to 'Back', @publishable %>
