Added a way for the author of an exercise to manually specify sources

--- a/app/views/collaborators/_index.html.erb
+++ b/app/views/collaborators/_index.html.erb
@@ -1,6 +1,5 @@
 <% # Clients of this partial must supply the following variable:
-   # collaborators
-%>
+   # collaborators %>
 
 <b>Collaborators</b>
 
