--- a/app/views/exercises/questions/fill_in_the_blank_answers/_form.html.erb
+++ b/app/views/exercises/questions/fill_in_the_blank_answers/_form.html.erb
@@ -3,32 +3,34 @@
 
 <div class="answers_form">
   <p>
-    <b>Fill in the blank answers</b>
+    <b>Fill in the blank</b>
   </p>
   <%= q.fields_for :fill_in_the_blank_answers do |a| %>
     <div class="answer_form">
-      <div class="field">
-        <%= a.label :pre_content %><br />
+      <p>
+        <b><%= q.object.id ? "Fill in the blank answer #{q.object.position}" : 'New fill in the blank answer' %>
+        (Suggested credit: <%= q.number_field :credit, :size => 3, :maxlength => 3, :class => 'inline' %>)</b>
+      </p>
+
+      <div class="field inline-block">
+        <%= a.label :pre_content, 'Content before the blank:' %><br/>
         <%= a.text_area :pre_content %>
       </div>
-      <div class="field">
-        <%= a.label :blank_answer %><br />
-        <%= a.text_field :blank_answer %>
+      <div class="field inline-block">
+        <%= a.label :blank_answer, 'Acceptable answers for blank:' %><br/>
+        <%= a.text_area :blank_answer %>
       </div>
-      <div class="field">
-        <%= a.label :post_content %><br />
+      <div class="field inline-block">
+        <%= a.label :post_content, 'Content after the blank:' %><br/>
         <%= a.text_area :post_content %>
       </div>
-      <div class="field">
-        <%= a.label :credit %><br />
-        <%= a.text_field :credit %>
-      </div>
 
-      <%= a.link_to_remove "Remove this answer" %><br/><br/>
-    </div>
+      <div class="clear">
+        <%= a.link_to_remove "Remove this blank", confirm: 'Are you sure you wish to remove this blank and all associated content?' %><br/><br/>
+      </div>
   <% end %>
 
-  <%= q.link_to_add "Add fill in the blank answer", :fill_in_the_blank_answers %>
+  <%= q.link_to_add "Add fill in the blank", :fill_in_the_blank_answers %>
 </div>
 
 <br/>
