--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -74,7 +74,7 @@
 <% end %>
 <% if @exercise.can_be_destroyed_by?(current_user) || user_is_admin? %>
 <%= link_to 'Delete', @exercise, method: :delete, data: {
-      confirm: 'Are you sure you want to delete this exercise?'
+      confirm: 'Are you sure you want to delete this exercise and all associated content?'
 } %> |
 <% end %>
 <%= link_to 'Back', @exercise.is_published? ? exercises_path : @exercise.lists.first %>
